--- a/file/style.css
+++ b/file/style.css
@@ -16,7 +16,7 @@ body {
 	background-color: RGB(220, 220, 220);
 }
 
-#zhengbindiv {
+#wuweidiv {
 	position: relative;
 	border: 5px solid RGB(2, 2, 2);
 	width: 700px;
